<resources>
    <string name="app_name">AndromiaMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">Andromia</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="creation">Inscription</string>
    <string name="titleCreation">Inscription</string>
    <string name="email">Email</string>
    <string name="confirmation">Confirmation</string>
    <string name="createAccount">S\'inscrire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portal_key">Portal Key</string>
    <string name="explore">Explore</string>
    <string name="health">Health:</string>
    <string name="damage">Damage:</string>
    <string name="speed">Speed:</string>
    <string name="critical">Critical:</string>
    <string name="affinity">Affinity</string>
    <string name="talents">Talents</string>
    <string name="kernel">Kernel</string>
    <string name="hash">Hash</string>
    <string name="quit_exploration">Quit exploration</string>
    <string name="no_monster_found">No monster found</string>
    <string name="no_vault_found">No vault found</string>
    <string name="activate_kernel">Activate kernel</string>
    <string name="scan_cancelled">Scan cancelled</string>
</resources>